{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 13,
  "lineage": "727a3b3c-b62a-a36d-9e25-f86d6db70b02",
  "resources": [
    {
      "module": "module.web-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262435403714:security-group/sg-077b3c5c5218047d8",
            "description": "this is for webserver",
            "egress": [],
            "id": "sg-077b3c5c5218047d8",
            "ingress": [],
            "name": "web-sg",
            "name_prefix": "",
            "owner_id": "262435403714",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-087dad59de2e76c03"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.web-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_cidr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-407496517",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "us-east-1",
            "security_group_id": "sg-077b3c5c5218047d8",
            "security_group_rule_id": "sgr-0d714b175cb1298e3",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.web-sg.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.web-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_cidr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-2465516153",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-077b3c5c5218047d8",
            "security_group_rule_id": "sgr-0e38b7cbb556e633c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.web-sg.aws_security_group.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-612276172",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-077b3c5c5218047d8",
            "security_group_rule_id": "sgr-06cd710ce237c5004",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.web-sg.aws_security_group.this"
          ]
        }
      ]
    }
  ]
}